--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,12 @@ nav a.active{
     color: rgb(35, 190, 10);
     border: 1px solid rgb(35, 190, 10);
 }
+
+.rating-bg{
+   background: rgba(255, 173, 51, 0.204);
+   color: #FFAC33;
+}
+.category-bg{
+   background:  rgba(50, 142, 255, 0.15);
+   color: #328EFF;
+}
